deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ask-api
  annotations:
    cloud.google.com/backend-config: '{"default": "ingress-backendconfig"}'
spec:
  type: ClusterIP
  selector:
    app: ask-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
